[package]
name = "enfys-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
crossbeam = "0.8.4"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
ws = { version = "0.9.2", default-features = false }

[dev-dependencies]
mio = "*"
url = "*"
